<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_data_new"
        android:title="@string/title_data_new"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/data_new">
    </item>
    <item
        android:id="@+id/navigation_data_approve"
        android:title="@string/title_data_approve"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/data_approve">
    </item>
    <item
        android:id="@+id/navigation_data_pending"
        android:title="@string/title_data_pending"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/data_pending">
    </item>

  <!--  <item
        android:id="@+id/navigation_data_reject"
        android:title="@string/title_data_reject"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/data_reject">
    </item>
-->



</menu>