<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_jtomos_34"
    tools:context="surveyor.id.com.mobilesurvey.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="40dp"
            android:orientation="vertical">


            <!--<ImageView
                android:id="@+id/image_logo"
                android:layout_centerHorizontal="true"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_app4"
                android:layout_marginBottom="20dp"/>-->

            <ImageView
                android:id="@+id/image_logo"
                android:layout_centerHorizontal="true"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:src="@drawable/jtomos_baru3"
                android:layout_marginBottom="20dp"/>

            <RelativeLayout
                android:id="@+id/username_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_login5_baru"
                android:layout_below="@+id/image_logo">

                <ImageView
                    android:id="@+id/image_username"
                    android:layout_width="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_login_username"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_login5_baru"
                    android:layout_toRightOf="@+id/image_username"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:hint="@string/username"></EditText>

            </RelativeLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_login5_baru"
                android:layout_below="@+id/username_box"
                android:id="@+id/passsword_box">

                <ImageView
                    android:id="@+id/image_passwprd"
                    android:layout_width="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_login_password"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:inputType="textPassword"
                    android:layout_toRightOf="@+id/image_passwprd"
                    android:layout_toLeftOf="@+id/tampil_password"
                    android:background="@drawable/bg_login5_baru"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionGo"></EditText>

                <ImageView
                    android:layout_alignParentRight="true"
                    android:id="@+id/tampil_password"
                    android:layout_width="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_visib_off"/>

            </RelativeLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/masuk"
                android:text="@string/login"
                android:textColor="@color/putih"
                android:background="@drawable/bg_login6_baru"
                android:layout_below="@id/passsword_box"/>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
